Increased min-height of studio title to avoid wrapping issues

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -17,7 +17,7 @@ a.photo-title {
 }
 
 h3.photo-title {
-  min-height: 30px;
+  min-height: 55px;
   color: #0b0b0b;
 }
 
